Update users resource
