# iot/api/resources/users.py
@@ -17,24 +17,6 @@ class Users(Resource):
     def get():
         '''
         Get login user info
-        ---
-        tags:
-          - users
-        responses:
-          200:
-            description: User info
-            schema:
-              properties:
-                username:
-                  type: string
-                  description: username for user
-                email:
-                  type: string
-                  description: email for user
-            examples:
-              application/json:
-                username: John
-                email: John@example.com
         '''
         return {'username' : g.user.username,
                 'email' : g.user.email}
@@ -44,34 +26,6 @@ class Users(Resource):
     def post():
         '''
         Create a new user
-        ---
-        tags:
-          - users
-        parameters:
-          - in: body
-            name: body
-            schema:
-              id: User
-              required:
-                - username
-                - password
-                - email
-              properties:
-                username:
-                  type: string
-                  description: username for user
-                password:
-                  type: string
-                  format: password
-                  description: password for user
-                email:
-                  type: string
-                  description: email for user
-        responses:
-          201:
-            description: User created
-          400:
-            description: Username or Email already exist
         '''
         parser = reqparse.RequestParser()
         parser.add_argument('username', required=True,
@@ -82,14 +36,14 @@ class Users(Resource):
                             help='Email cannot be blank!', location='json')
         args = parser.parse_args()
 
-        if db.session.query(User).filter(User.username == args['username']).first():
+        if db.session.query(User).filter(User.username == args.username).first():
             return {'message': 'Username already exist'}, 400
 
-        if db.session.query(User).filter(User.email == args['email']).first():
+        if db.session.query(User).filter(User.email == args.email).first():
             return {'message': 'This Email has been used, please change'}, 400
 
-        user = User(username=args['username'], email=args['email'])
-        user.set_password(args['password'])
+        user = User(username=args.username, email=args.email)
+        user.set_password(args.password)
         db.session.add(user)
         db.session.commit()
         return {'username': user.username, 'message': 'Account Created'}, 201
@@ -99,26 +53,6 @@ class Users(Resource):
     def put():
         '''
         Modify user info
-        ---
-        tags:
-          - users
-        parameters:
-          - in: body
-            name: body
-            schema:
-              properties:
-                password:
-                  type: string
-                  format: password
-                  description: password for user
-                email:
-                  type: string
-                  description: email for user
-        responses:
-          201:
-            description: User info upfated
-          400:
-            description: Email already exist
         '''
         parser = reqparse.RequestParser()
         parser.add_argument('password', location='json')
@@ -127,12 +61,14 @@ class Users(Resource):
 
         user = db.session.query(User).filter(
             User.username == g.user.username).first()
-        if args['email']:
-            if db.session.query(User).filter(User.email == args['email']).first():
+        if args.email:
+            if args.email == g.user.email:
+                return {'message': 'You have used this email'}, 400
+            if db.session.query(User).filter(User.email == args.email).first():
                 return {'message': 'This Email has been used, please change'}, 400
-            user.email = args['email']
-        if args['password']:
-            user.set_password(args['password'])
+            user.email = args.email
+        if args.password:
+            user.set_password(args.password)
         db.session.add(user)
         db.session.commit()
         return {'message': 'User info updated'}, 201
@@ -142,30 +78,15 @@ class Users(Resource):
     def delete():
         '''
         Delete user
-        ---
-        tags:
-          - users
-        parameters:
-          - in: body
-            name: body
-            schema:
-              required:
-                - username
-              properties:
-                username:
-                  type: string
-        responses:
-          204:
-            description: User deleted
         '''
         parser = reqparse.RequestParser()
         parser.add_argument('username', required=True, location='json')
         args = parser.parse_args()
 
         user = db.session.query(User).filter(
-            User.username == args['username']).first()
+            User.username == args.username).first()
         if not user:
-            return {'message': '{} do not exist'.format(args['username'])}, 400
+            return {'message': f'{args.username} do not exist'}, 400
         db.session.delete(user)
         db.session.commit()
-        return {'message': '{} deleted'.format(user.username)}, 204
+        return {'message': f'{args.username} deleted'}, 204
