# iot/static/swagger.json
@@ -214,6 +214,146 @@
           }
         }
       }
+    },
+    "/users": {
+      "get": {
+        "tags": [
+          "users"
+        ],
+        "description": "Get login user info",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "User info"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "users"
+        ],
+        "description": "Create a new user",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "required": [
+                "username",
+                "password",
+                "email"
+              ],
+              "properties": {
+                "username": {
+                  "description": "Username",
+                  "type": "string"
+                },
+                "password": {
+                  "description": "Password",
+                  "type": "string",
+                  "format": "password"
+                },
+                "email": {
+                  "description": "Email",
+                  "type": "string"
+                }
+              },
+              "example": {
+                "username": "example",
+                "password": "example",
+                "email": "example@example.com"
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User info"
+          },
+          "400": {
+            "description": "Username or Email already exist"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "users"
+        ],
+        "description": "Modify user info",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "properties": {
+                "password": {
+                  "description": "Password",
+                  "type": "string",
+                  "format": "password"
+                },
+                "email": {
+                  "description": "Email",
+                  "type": "string"
+                }
+              },
+              "example": {
+                "password": "example",
+                "email": "example@example.com"
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "User info upfated"
+          },
+          "400": {
+            "description": "Email already exist"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "users"
+        ],
+        "description": "Delete user",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "required": [
+                "username"
+              ],
+              "properties": {
+                "username": {
+                  "description": "Username",
+                  "type": "string"
+                }
+              },
+              "example": {
+                "username": "example"
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "User deleted"
+          }
+        }
+      }
     }
   }
 }
